<resources>
    <string name="app_name">photon</string>
    <string name="alertdialog_notitile">No Title</string>
    <string name="alertdialog_sorry">Sorry!</string>
    <string name="alertdialog_maxLimit_msg">Max size is 20.</string>
    <string name="alertdialog_invalidnum_msg">Improper value detected. Please enter a number greater than 0.</string>
    <string name="alertdialog_notNumeric">Non numeric!</string>
    <string name="invalidMatrix">Invalid Matrix.</string>
    <string name="alertdialog_error_msg">Something went wrong.</string>
    <string name="buttontext_ok">OK</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="log_intentservice">Inside Intent Service</string>
    <string name="text_enter_values">Please enter values below:</string>
    <string name="text_num_rows">Number of Rows</string>
    <string name="text_num_cols">Number of Columns</string>
    <string name="text_enter_rows">Enter number of rows</string>
    <string name="text_enter_cols">Enter number of columns</string>
    <string name="buttontext_submit">Submit</string>
    <string name="buttontext_calculate">Calculate</string>
    <string name="text_cal">Calculating...</string>

</resources>
